Recipe Service amended